styles/styles.css
@font-face {
  font-family: "Optimistic Display";
  src: url("/fonts/Optimistic-Display-Light.woff2")
  format("woff2");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Optimistic Display";
  src: url("/fonts/Optimistic-Display-Regular.woff2")
  format("woff2");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Optimistic Display";
  src: url("/fonts/Optimistic-Display-Bold.woff2")
  format("woff2");
  font-weight: 700;
  font-style: normal;
}

*:focus-visible {
  outline-style: solid;
  outline-width: 2px;
  outline-color: var(--outline);
  border-radius: 3px;
}

html, body {
  background: var(--overscroll-background);
  min-height: 100%;
  font-family: "Optimistic Display", system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

input:focus-visible  {
  border-radius: 6px;
}

#__next, #__next > div {
  min-height: 100vh;
}

/* SELECT */

select {
  display: flex;
  min-width: 156px;
  height: 24px;
  align-items: center;
  cursor: pointer;

  @supports (font: -apple-system-body) {
    appearance: none;
    min-width: 136px;
    padding-left: 4px;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%23fff'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m19.5 8.25-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E%0A");
    background-repeat: no-repeat;
    background-size: 16px 16px;
    background-position: 95% 4px;
  }

  @supports (appearance: base-select) {
    appearance: base-select;
    padding-inline: 4px;
    background-image: none;
    color: #fff;

    &::picker-icon {
      content: "";
      width: 16px;
      height: 16px;
      margin-right: 2px;
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%23fff'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m19.5 8.25-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E%0A");
      transition: rotate 0.2s ease-out;
    }

    &:open::picker-icon {
      rotate: 180deg;
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='%2361DAFB'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m19.5 8.25-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E%0A");
    }

    &::picker(select) {
      appearance: base-select;
      padding: 2px;
      margin-top: 6px;
      border: 2px solid var(--select-border);
      background: var(--select-background);
      border-radius: 6px;
      font-weight: 400;
      opacity: 0;
      overflow: clip;
      transition: opacity 0.5s ease-out;
      box-shadow: hsl(206 22% 7% / 60%) 0 10px 32px -8px, hsl(206 22% 7% / 40%) 0 10px 18px -12px;
    }

    &:open::picker(select) {
      opacity: 1;
      overflow: hidden;
      display: flex;
      flex-direction: column;
      gap: 2px;

      @starting-style {
        opacity: 0;
      }
    }

    option {
      display: flex;
      align-items: center;
      padding: 2px 8px;
      cursor: pointer;
      border-radius: 3px;
      transition: background 0.2s ease-out;
      color: #fff !important;

      &:where(:hover, :focus, :active) {
        background: color-mix(in srgb, var(--select-border) 60%, transparent);
      }

      &:checked {
        background: var(--active);
      }

      &:checked:hover {
        background: color-mix(in srgb, var(--active) 60%, transparent);
      }

      &::checkmark {
        display: none;
      }
    }
  }
}

/* TOOLTIP */

.TooltipContent {
  border-radius: 6px;
  padding: 6px 12px;
  font-size: 13px;
  font-weight: 300;
  line-height: 1.5;
  color: #fff;
  background: #000;
  border: 1px solid var(--tooltip-border);
  box-shadow: hsl(206 22% 7% / 40%) 0 10px 32px -8px, hsl(206 22% 7% / 25%) 0 10px 18px -12px;
  user-select: none;
  animation-duration: 400ms;
  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
  will-change: transform, opacity;
  max-width: 220px;

  svg {
    stroke: var(--tooltip-border);
  }
}

.TooltipContent[data-state='delayed-open'][data-side='top'] {
  animation-name: slideDownAndFade;
}

.TooltipContent[data-state='delayed-open'][data-side='right'] {
  animation-name: slideLeftAndFade;
}

.TooltipContent[data-state='delayed-open'][data-side='bottom'] {
  animation-name: slideUpAndFade;
}

.TooltipContent[data-state='delayed-open'][data-side='left'] {
  animation-name: slideRightAndFade;
}

@keyframes slideUpAndFade {
  from {
    opacity: 0;
    transform: translateY(6px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideRightAndFade {
  from {
    opacity: 0;
    transform: translateX(-6px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideDownAndFade {
  from {
    opacity: 0;
    transform: translateY(-6px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideLeftAndFade {
  from {
    opacity: 0;
    transform: translateX(6px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

/* README WRAPPER */
#readmeMarkdownWrapper {
  font-size: 90%;
  line-height: 1.4;

  *:first-child {
    margin-top: 0;
  }

  *:last-child {
    margin-bottom: 0;
  }

  p, h1, h2, h3, h4, h5, h6 {
    margin-bottom: 0;
    text-align: left;
  }

  a:has(img), p:empty {
    display: none;
  }

  code, pre, a  {
    white-space: pre-wrap;
    word-break: break-word;
  }

  code {
    font-size: 115%;
    background-color: var(--inline-code-background);
    border-radius: 4px;
    padding: 1px 4px;
  }

  pre {
    margin-bottom: 0;

    code {
      background-color: unset;
      border-radius: unset;
      padding: unset;
    }

    &.shiki {
      padding: 12px 16px;
      background-color: var(--code-block-background) !important;
    }
  }

  img {
    max-width: 100%;
  }

  blockquote {
    margin-block-start: 8px;
    margin-block-end: 0;
    margin-inline-start: 0;
    padding-inline-start: 1rem;
    border-left-width: 3px;
    border-left-style: solid;
  }

  ul, ol {
    margin-inline-start: 0.75rem;
    padding-inline-start: 1rem;
    margin-bottom: 0;

    ul, ol {
      padding-top: 8px;
      margin-inline-start: 0;
    }
  }

  li *:last-child {
    margin-bottom: 12px;
  }

  details {
    padding-inline-start: 1rem;

    summary {
      margin-top: 8px !important;
    }
  }

  table {
    margin-top: 8px;
    border-collapse: collapse;
    width: fit-content;
  }

  td, th {
    border: 1px solid var(--table-border);
    padding: 4px 8px;
  }

  th {
    background-color: var(--table-header-background);
  }
}

